# tp-multithreading

./: LICENSE  README.md  task.py  test_task.py
.github/workflows/: ci.yml
tp2/: Task.py  boss.py  client.py  manager.py  minion.py
tp3/: Task.py  test_task_json.py
tp4/: CMakeLists.txt  boss.cpp  minion.cpp  proxy.py  task.hpp
